--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -92,10 +92,10 @@
       "metadata": {
         "scrolled": true,
         "id": "yqyWbMp-U5yE",
-        "outputId": "e1f765ed-3c4b-4645-bea9-83e92cba84d7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e1f765ed-3c4b-4645-bea9-83e92cba84d7"
       },
       "source": [
         "2 + 3"
@@ -118,22 +118,37 @@
       "cell_type": "code",
       "metadata": {
         "scrolled": true,
-        "id": "ITtBZC2kU5yE"
+        "id": "ITtBZC2kU5yE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e9fbebdb-fc8a-4efb-bc71-2eed9c60dd46"
       },
       "source": [
         "2 * 3"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "mS2JIy1oU5yE",
-        "outputId": "4520a401-305b-4194-bbc2-e67cce83dc83",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4520a401-305b-4194-bbc2-e67cce83dc83"
       },
       "source": [
         "5 - 11"
@@ -156,10 +171,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "WRjeVm8rU5yF",
-        "outputId": "74cfc629-bfc9-433a-894f-f6bd9770ea57",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "74cfc629-bfc9-433a-894f-f6bd9770ea57"
       },
       "source": [
         "5.0 - 11"
@@ -182,10 +197,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Q9pdWY_hU5yF",
-        "outputId": "8504635b-af4c-4d95-cd8f-ab89c450abdf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8504635b-af4c-4d95-cd8f-ab89c450abdf"
       },
       "source": [
         "5 / 11"
@@ -208,10 +223,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "TPzva1UXU5yF",
-        "outputId": "f7f5abde-a906-4c72-9608-6f37255d4298",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f7f5abde-a906-4c72-9608-6f37255d4298"
       },
       "source": [
         "6 / 3"
@@ -234,10 +249,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "GUmGnpHVU5yF",
-        "outputId": "56711914-5b67-4981-e396-c4f2b351bd33",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "56711914-5b67-4981-e396-c4f2b351bd33"
       },
       "source": [
         "5 // 11"
@@ -260,10 +275,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "JEXb5uPQU5yF",
-        "outputId": "1efd076f-0770-4efa-edb7-824ebce0618b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1efd076f-0770-4efa-edb7-824ebce0618b"
       },
       "source": [
         "6 // 3"
@@ -299,10 +314,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "msOx7ga_U5yF",
-        "outputId": "48095a91-3839-40e0-e545-3a39dfec6954",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "48095a91-3839-40e0-e545-3a39dfec6954"
       },
       "source": [
         "-12 // 5  # What will this output?  Guess before evaluating!"
@@ -345,11 +360,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "vgnp3B3JU5yG",
-        "outputId": "b503a621-c71c-48f8-eb17-611f4841da95",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 165
-        }
+        },
+        "outputId": "b503a621-c71c-48f8-eb17-611f4841da95"
       },
       "source": [
         "Out[4] + Out[5]"
@@ -384,10 +399,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "kE_p7LcGU5yG",
-        "outputId": "a5fd599b-9911-4a5b-b05c-fdd554511432",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a5fd599b-9911-4a5b-b05c-fdd554511432"
       },
       "source": [
         "(3 + 4) * 5"
@@ -410,10 +425,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "n-hUvTxHU5yG",
-        "outputId": "56ae2c26-77d7-4caa-9ef9-f9c6fdf513f2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "56ae2c26-77d7-4caa-9ef9-f9c6fdf513f2"
       },
       "source": [
         "3 + (4 * 5)"
@@ -436,10 +451,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "3E_z7E81U5yG",
-        "outputId": "b47364b5-cfdf-4262-d0c7-84c10db82b50",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b47364b5-cfdf-4262-d0c7-84c10db82b50"
       },
       "source": [
         "3 + 4 * 5   #  What do you think will be the result?  Remember PEMDAS?"
@@ -465,11 +480,11 @@
       ],
       "metadata": {
         "id": "Azt9irrVLcE1",
-        "outputId": "560e8a51-3e56-4567-b305-d973340a3633",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 165
-        }
+        },
+        "outputId": "560e8a51-3e56-4567-b305-d973340a3633"
       },
       "execution_count": 8,
       "outputs": [
@@ -503,7 +518,7 @@
       "source": [
         "#  An empty cell.  Have fun!\n"
       ],
-      "execution_count": 4,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -519,10 +534,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "xTWOi_XxU5yH",
-        "outputId": "8f7b7b52-c6e1-4142-ad50-6371769807a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8f7b7b52-c6e1-4142-ad50-6371769807a9"
       },
       "source": [
         "23 // 5  # Integer division"
@@ -545,10 +560,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "UNjARp_xU5yH",
-        "outputId": "560d2a09-d26e-4d28-f0ca-c4353db0144a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "560d2a09-d26e-4d28-f0ca-c4353db0144a"
       },
       "source": [
         "23 % 5  # The remainder after division"
@@ -582,10 +597,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "F2zJS-tRU5yH",
-        "outputId": "5013ef33-f38d-4977-fbc1-36fc834fd1b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5013ef33-f38d-4977-fbc1-36fc834fd1b0"
       },
       "source": [
         "divmod(23,5)"
@@ -608,10 +623,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "y3dckm2dU5yH",
-        "outputId": "f863046f-b71f-40f3-cbc1-906386f447ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f863046f-b71f-40f3-cbc1-906386f447ff"
       },
       "source": [
         "type(divmod(23,5))"
@@ -643,10 +658,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "TU1Cho4tU5yI",
-        "outputId": "43932a82-1588-4797-b675-72825f22e7b4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "43932a82-1588-4797-b675-72825f22e7b4"
       },
       "source": [
         "type(3)"
@@ -669,10 +684,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "OYALDWO5U5yI",
-        "outputId": "891597d1-189c-4f58-d321-6244becfb67e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "891597d1-189c-4f58-d321-6244becfb67e"
       },
       "source": [
         "type(3.0)"
@@ -695,10 +710,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "SHQ-_qcHU5yI",
-        "outputId": "b948210a-7e7a-48bd-d708-ab78678c269d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b948210a-7e7a-48bd-d708-ab78678c269d"
       },
       "source": [
         "type('Hello')"
@@ -721,10 +736,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "nhf-YmD3U5yI",
-        "outputId": "42dc714b-ad1f-44a4-ec9a-d76f8860e95f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "42dc714b-ad1f-44a4-ec9a-d76f8860e95f"
       },
       "source": [
         "type([1,2,3])"
@@ -755,68 +770,164 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Uc7eYJLWU5yI"
+        "id": "Uc7eYJLWU5yI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c9363550-62e0-4e72-c3ba-8daf20035784"
       },
       "source": [
         "3 + 3"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jv6N6XLQU5yI"
+        "id": "jv6N6XLQU5yI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "176f7392-036a-497b-94e6-4f9bbe302684"
       },
       "source": [
         "3.0 + 3.0"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "KKF4Sv-jU5yI"
+        "id": "KKF4Sv-jU5yI",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "6b322e09-1192-41b1-f485-373830912ed2"
       },
       "source": [
         "'Hello' + 'World!'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'HelloWorld!'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "q9H__Z99U5yI"
+        "id": "q9H__Z99U5yI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cc7387d1-6c3f-4906-9661-9f3fda089ab1"
       },
       "source": [
         "[1,2,3] + [4,5,6]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5, 6]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NDDAxeQJU5yJ"
+        "id": "NDDAxeQJU5yJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5d28b361-cf17-4d61-fde7-05502f0e5a0d"
       },
       "source": [
         "3 + 3.0"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xuBj_w9_U5yJ"
+        "id": "xuBj_w9_U5yJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 165
+        },
+        "outputId": "7c3d52d5-2d99-4a50-82f2-385a9891a836"
       },
       "source": [
         "3 + 'Hello!'  # Uh oh!"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-37-dacf80a979a3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;36m3\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'Hello!'\u001b[0m  \u001b[0;31m# Uh oh!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'int' and 'str'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -827,7 +938,7 @@
         "#  An empty cell.  Have fun!\n",
         "#  Try operating on ints, floats, and strings, with different operations.  Which ones work?  How?"
       ],
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -845,11 +956,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "MmRfXepMU5yJ",
-        "outputId": "928e71da-1fd4-4021-d346-24d1191fe9c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "928e71da-1fd4-4021-d346-24d1191fe9c7"
       },
       "source": [
         "3 * 'Hello!'"
@@ -875,11 +986,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "gVo2bjWzU5yJ",
-        "outputId": "4a8884ff-09cf-4017-bace-1e8d88dbf838",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "4a8884ff-09cf-4017-bace-1e8d88dbf838"
       },
       "source": [
         "0 * 'Hello!'"
@@ -905,10 +1016,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "OqWWK6VWU5yJ",
-        "outputId": "c2e034d0-8690-4b73-8fe1-aa57f048303f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c2e034d0-8690-4b73-8fe1-aa57f048303f"
       },
       "source": [
         "2 * [1,2,3]"
@@ -939,13 +1050,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fAxwL5O3U5yJ"
+        "id": "fAxwL5O3U5yJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "62d62030-cc37-4dbb-8d78-ca2337a66d03"
       },
       "source": [
-        "#  Practice cell\n"
+        "100*'A'\n",
+        "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -960,10 +1091,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "VNDmF-hcU5yK",
-        "outputId": "84eb6571-84eb-4758-f7bb-8867f8c9766c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "84eb6571-84eb-4758-f7bb-8867f8c9766c"
       },
       "source": [
         "2**1000"
@@ -986,10 +1117,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "DEHGNQ3RU5yK",
-        "outputId": "1e82122a-10bd-478a-c39f-74f50a7bc332",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1e82122a-10bd-478a-c39f-74f50a7bc332"
       },
       "source": [
         "2.0**1000"
@@ -1025,10 +1156,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "gbiP5lpxU5yK",
-        "outputId": "6a63a8cc-6384-4242-f969-e034106c2843",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6a63a8cc-6384-4242-f969-e034106c2843"
       },
       "source": [
         "type(2**1000)"
@@ -1051,10 +1182,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "oYFQ7ZxFU5yL",
-        "outputId": "98790077-2210-4250-9e64-5b7e391f4883",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "98790077-2210-4250-9e64-5b7e391f4883"
       },
       "source": [
         "type(2.0**1000)"
@@ -1081,7 +1212,7 @@
       "source": [
         "#  An empty cell.  Have fun!\n"
       ],
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": []
     },
     {
