--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -1281,79 +1281,184 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AqNG6PZBU5yM"
+        "id": "AqNG6PZBU5yM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "979de424-1206-4351-97cf-e08e105b4df5"
       },
       "source": [
         "3 > 2"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nOgi4gqUU5yM"
+        "id": "nOgi4gqUU5yM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d349b0ff-234e-4b4c-ef23-1e96a778a7f8"
       },
       "source": [
         "type(3 > 2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "bool"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WabkpXPbU5yM"
+        "id": "WabkpXPbU5yM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b48c8f71-20c2-468c-8d63-b2c909ebea3b"
       },
       "source": [
         "10 < 3"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Mohc3o5oU5yM"
+        "id": "Mohc3o5oU5yM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "af38b544-00b9-4ba2-dbe1-b4cac46a7593"
       },
       "source": [
         "2.4 < 2.4000001"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jnrzq17fU5yM"
+        "id": "jnrzq17fU5yM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f5dfa49d-8388-442f-d2c5-119ccac59484"
       },
       "source": [
         "32 >= 32"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "D55td8J7U5yM"
+        "id": "D55td8J7U5yM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a45efcd2-8ce2-4987-dd93-222039889ac7"
       },
       "source": [
         "32 >= 31"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "L0RlreGLU5yM"
+        "id": "L0RlreGLU5yM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "534d5d2b-9ab3-4051-d33d-bc12882f9265"
       },
       "source": [
         "2 + 2 == 4"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1367,13 +1472,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PGlksxncU5yN"
+        "id": "PGlksxncU5yN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "00a1f65c-e50a-42cb-a416-d2bad2d17dfc"
       },
       "source": [
-        "#  Write your code here.\n"
+        "if 23**32 > 32**23:\n",
+        "  print('23^32')\n",
+        "else: \n",
+        "  print('32^23')\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "23^32\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1396,24 +1516,54 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "t1BCq6GFU5yN"
+        "id": "t1BCq6GFU5yN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a6917ae6-5aae-436f-e964-2a7edb79c4af"
       },
       "source": [
         "63 % 7 == 0  # Is 63 divisible by 7?"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kYz8XfraU5yN"
+        "id": "kYz8XfraU5yN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "73664cb0-1ca1-4846-bb6c-857aa997dfa2"
       },
       "source": [
         "101 % 2 == 0  # Is 101 even?"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1427,13 +1577,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LPqBN_VlU5yN"
+        "id": "LPqBN_VlU5yN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "244d79c3-7fe7-4e93-9fc5-46b1a8ebf69d"
       },
       "source": [
-        "# Your code goes here.\n"
+        "1234567890 % 3 == 0"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1460,46 +1625,106 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eRo1A6IzU5yN"
+        "id": "eRo1A6IzU5yN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3e218c7d-3277-41dc-87d4-d2c21ebae7db"
       },
       "source": [
         "True and False"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sFMWK-0HU5yN"
+        "id": "sFMWK-0HU5yN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "225f814b-63e9-4732-eb5b-8ab098d9a622"
       },
       "source": [
         "True or False"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5bREtxzOU5yN"
+        "id": "5bREtxzOU5yN",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2431f34c-41c2-4cbe-83a8-6aa963cac3a1"
       },
       "source": [
         "True or True"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DP0Rw6jDU5yO"
+        "id": "DP0Rw6jDU5yO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cc2fdebb-29c2-4080-c3d2-6d567b44a056"
       },
       "source": [
         "not True"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1513,80 +1738,185 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NVKb_6njU5yO"
+        "id": "NVKb_6njU5yO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "90ff3a42-5899-45a9-d4a0-063f9aac21ee"
       },
       "source": [
         "(2 > 3) and (3 > 2)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JrprEal6U5yO"
+        "id": "JrprEal6U5yO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "87a7f1c7-cb70-49a7-812b-55964097a25f"
       },
       "source": [
         "(1 + 1 == 2) or (1 + 1 == 3)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "scrolled": true,
-        "id": "Ef-ryEGjU5yO"
+        "id": "Ef-ryEGjU5yO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2e0e8e94-67a5-4d84-aba6-8c2b81b7853b"
       },
       "source": [
         "not (-1 + 1 >= 0)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FUSY_QuLU5yO"
+        "id": "FUSY_QuLU5yO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "00315a3f-64fa-4ca9-fb3e-edf42cc39bff"
       },
       "source": [
         "2 + 2 == 4"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hKTk4LjaU5yO"
+        "id": "hKTk4LjaU5yO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7e4a6f2d-431e-4285-bfa8-7244e7995d64"
       },
       "source": [
         "2 + 2 != 4  # For \"not equal\", Python uses the operation `!=`."
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UsJtoToLU5yO"
+        "id": "UsJtoToLU5yO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c4e8d812-71e9-436b-aaa0-8dbc71aba8e6"
       },
       "source": [
         "2 + 2 != 5  # Is 2+2 *not* equal to 5?"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tVfKlWT_U5yO"
+        "id": "tVfKlWT_U5yO",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1737078c-5218-4cc7-fa3e-a62e138ad3a6"
       },
       "source": [
         "not (2 + 2 == 5)  # The same as above, but a bit longer to write."
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1600,13 +1930,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nD-RgY0CU5yP"
+        "id": "nD-RgY0CU5yP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "334fbc0d-ea4f-47b5-aac1-b8c29466d2ef"
       },
       "source": [
-        "# Experiment here.\n"
+        "print(not not (2 + 2 == 5))\n",
+        "print(not not not (2 + 2 == 5))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1620,24 +1964,54 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y2lLPpdWU5yP"
+        "id": "Y2lLPpdWU5yP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "46a25d43-0aa8-4edf-d5de-40c84bbace58"
       },
       "source": [
         "False * 100"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5y3rtwrdU5yP"
+        "id": "5y3rtwrdU5yP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ffbf9c4d-0ac5-4902-e9dc-ee0f7a973b51"
       },
       "source": [
         "True + 13"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "14"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 77
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1694,15 +2068,15 @@
         "\n",
         "(Edit here to give solutions to the exercises)\n",
         "\n",
-        "1.\n",
+        "1. True or False equals True, True and False equals False.\n",
         "\n",
-        "2.\n",
+        "2. or with True will always be True, and with False will always be false. \n",
         "\n",
-        "3.\n",
+        "3. print(2349872348723 % 7 == 0, not 2349872348723 % 11 == 0)\n",
         "\n",
-        "4.\n",
+        "4. The order prioritizes not, then and, then or.\n",
         "\n",
-        "5."
+        "5. p xor q = (p and not q )or( not p and q )"
       ]
     },
     {
