--- a/P4M_Notebook_1.ipynb
+++ b/P4M_Notebook_1.ipynb
@@ -2105,7 +2105,7 @@
       "source": [
         "e = 2.71828"
       ],
-      "execution_count": null,
+      "execution_count": 78,
       "outputs": []
     },
     {
@@ -2120,24 +2120,54 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "2ZJ7VtIwU5yQ"
+        "id": "2ZJ7VtIwU5yQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c1af536d-79cc-4f31-d282-3d5214fdb46a"
       },
       "source": [
         "e * e"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "7.3890461584"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 79
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G46Ma5fCU5yQ"
+        "id": "G46Ma5fCU5yQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "01f57aad-251f-4d5c-e0ca-b0e95ac24426"
       },
       "source": [
         "type(e)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 80
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2160,19 +2190,34 @@
       "source": [
         "my_number = 17"
       ],
-      "execution_count": null,
+      "execution_count": 81,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "FitPq8UNU5yQ"
+        "id": "FitPq8UNU5yQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1f9e1eaf-d251-433a-fe4a-e26dafd54e6a"
       },
       "source": [
         "my_number < 23"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 82
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2191,7 +2236,7 @@
       "source": [
         "my_number = 3.14"
       ],
-      "execution_count": null,
+      "execution_count": 83,
       "outputs": []
     },
     {
@@ -2208,7 +2253,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zW6_fRoxU5yR"
+        "id": "zW6_fRoxU5yR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b62d7cf6-cfa0-46dc-f6f5-f69958256347"
       },
       "source": [
         "S = 0\n",
@@ -2217,8 +2266,16 @@
         "S = S + 3\n",
         "print(S)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2258,7 +2315,7 @@
         "new_number = my_number + 1\n",
         "my_number = 3.14"
       ],
-      "execution_count": null,
+      "execution_count": 85,
       "outputs": []
     },
     {
@@ -2275,14 +2332,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5J4rfa08U5yR"
+        "id": "5J4rfa08U5yR",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "66fe6786-9d6d-424c-acd5-e78ae09a098e"
       },
       "source": [
         "print(my_number)\n",
         "print(new_number)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.14\n",
+            "18\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2330,13 +2400,23 @@
         "\n",
         "(Use this space to work on the exercises.  Place more code and text cells above as needed.)\n",
         "\n",
-        "1.\n",
+        "1. = assigns a variable, and == is an equality operator.\n",
         "\n",
-        "2.\n",
+        "2. x = 3, then x = 3 * 3, which equals 9.\n",
         "\n",
-        "3.\n",
+        "3. you can make a new variable c, let c = b, b = a, then a = c.\n",
         "\n",
-        "4."
+        "4. \n",
+        "\n",
+        "pi = 3.141592653589793238\n",
+        "\n",
+        "G = 6.67408 * (10**-11)\n",
+        "\n",
+        "r = 149600000000\n",
+        "\n",
+        "t = 365.25 * 24 * 60 * 60\n",
+        "\n",
+        "M = (4 * (pi * * 2)*(r * * 3)) / (G * (t * * 2))"
       ]
     },
     {
